@@ -1,0 +1,10 @@
+class Foo:
+    """docstring of Foo."""
+
+    def meth(self):
+        """docstring of meth."""
+        pass
+
+    def skipmeth(self):
+        """docstring of skipmeth."""
+        pass
